Added settings view and coco files to the view, added color helperclass

--- a/Labb1ObjectiveC/Base.lproj/Main.storyboard
+++ b/Labb1ObjectiveC/Base.lproj/Main.storyboard
@@ -26,6 +26,70 @@
             </objects>
             <point key="canvasLocation" x="-900" y="134"/>
         </scene>
+        <!--Settings-->
+        <scene sceneID="09Y-fz-aeM">
+            <objects>
+                <viewController title="Settings" id="U8G-sH-SfD" customClass="SettingsViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FZz-qy-8Nl">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="lPp-Sv-Oao">
+                                <rect key="frame" x="128" y="158" width="118" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="switchChanged:" destination="U8G-sH-SfD" eventType="valueChanged" id="6ad-2r-VQt"/>
+                                </connections>
+                            </slider>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Hi7-3D-sYG">
+                                <rect key="frame" x="128" y="219" width="118" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="switchChanged:" destination="U8G-sH-SfD" eventType="valueChanged" id="ifq-Sj-uNJ"/>
+                                </connections>
+                            </slider>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="AYa-1N-Qvt">
+                                <rect key="frame" x="128" y="283" width="118" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="switchChanged:" destination="U8G-sH-SfD" eventType="valueChanged" id="LoL-w5-d4w"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Red" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gu3-NC-rQi">
+                                <rect key="frame" x="31" y="162" width="30" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Blue" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QvV-mC-rEQ">
+                                <rect key="frame" x="31" y="223" width="34" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Green" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5e2-Ja-ltW">
+                                <rect key="frame" x="31" y="287" width="47" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="Zog-qS-xfh"/>
+                    </view>
+                    <connections>
+                        <outlet property="blueSlider" destination="Hi7-3D-sYG" id="Za3-VS-a6h"/>
+                        <outlet property="greenSlider" destination="AYa-1N-Qvt" id="xfa-3y-CcJ"/>
+                        <outlet property="redSlider" destination="lPp-Sv-Oao" id="iYB-Mv-q1O"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1pR-ta-vyC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="658" y="-909"/>
+        </scene>
         <!--Main menu-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -68,7 +132,12 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Main menu" id="Uvn-uG-VnN">
-                        <barButtonItem key="rightBarButtonItem" title="Settings" id="Ivu-ns-1ON"/>
+                        <barButtonItem key="rightBarButtonItem" title="Settings" id="Ivu-ns-1ON">
+                            <connections>
+                                <action selector="settingsButton:" destination="BYZ-38-t0r" id="R8t-An-Lga"/>
+                                <segue destination="U8G-sH-SfD" kind="show" id="PaG-AR-EwP"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
